PythonProjects/ph_fenics/Mindlin_PHs_fenics/mindlin4scrimp/jitfailure-dolfin_expression_c60763680d06c983d4ebc3a192cb65b7/error.log
/tmp/tmpp2ea3sx6/dolfin_expression_c60763680d06c983d4ebc3a192cb65b7.cpp: In member function 'virtual void dolfin::dolfin_expression_c60763680d06c983d4ebc3a192cb65b7::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpp2ea3sx6/dolfin_expression_c60763680d06c983d4ebc3a192cb65b7.cpp:71:23: error: 'gau_Apw_0' was not declared in this scope
           values[0] = gau_Apw_0;
                       ^~~~~~~~~
/tmp/tmpp2ea3sx6/dolfin_expression_c60763680d06c983d4ebc3a192cb65b7.cpp: In member function 'virtual double dolfin::dolfin_expression_c60763680d06c983d4ebc3a192cb65b7::get_property(std::__cxx11::string) const':
/tmp/tmpp2ea3sx6/dolfin_expression_c60763680d06c983d4ebc3a192cb65b7.cpp:83:11: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
           if (name == "x0") return x0;          if (name == "xL") return xL;          if (name == "y0") return y0;          if (name == "yL") return yL;          if (name == "ampl") return ampl;          if (name == "sX") return sX;          if (name == "sY") return sY;          if (name == "X0") return X0;          if (name == "Y0") return Y0;          if (name == "rho") return rho;
           ^~
/tmp/tmpp2ea3sx6/dolfin_expression_c60763680d06c983d4ebc3a192cb65b7.cpp:83:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
           if (name == "x0") return x0;          if (name == "xL") return xL;          if (name == "y0") return y0;          if (name == "yL") return yL;          if (name == "ampl") return ampl;          if (name == "sX") return sX;          if (name == "sY") return sY;          if (name == "X0") return X0;          if (name == "Y0") return Y0;          if (name == "rho") return rho;
                                                 ^~
